[package]
name = "mssngr"
version = "0.1.0"
authors = ["Arghyadip Chakraborty <dev@arghyac.com>"]
edition = "2021"
description = "Distributed pub-sub broker"
homepage = "https://github.com/arghyadipchak/mssngr"
repository = "https://github.com/arghyadipchak/mssngr"
license = "GPL-3.0-or-later"

[dependencies]
axum = { version = "0.7.8", features = ["macros", "ws"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
toml = "0.8.19"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
